dark mode fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -56,11 +56,5 @@ body {
   z-index: 10;
 }
 
-@media (prefers-color-scheme: dark) {
-  .soon-tag {
-    background: rgba(255, 255, 255, 0.9);
-    color: black;
-  }
-}
 
 
